--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digiturno</title>
+    <title>Digiturno Sanidad Guaviare</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -32,7 +31,7 @@
     </style>
 </head>
 <body>
-    <h1>Bienvenido al Sistema Digiturno</h1>
+    <h1>Bienvenido al Sistema Digiturno Sanidad UPRES Guaviare</h1>
     <p>Haga clic en el botón para generar su turno</p>
     <button class="button" onclick="generarTurno()">Generar Turno</button>
     <div id="turno"></div>
