--- a/Index.html
+++ b/Index.html
@@ -31,7 +31,9 @@
     </style>
 </head>
 <body>
-    <h1>Bienvenido al Sistema Digiturno Sanidad UPRES Guaviare</h1>
+    <h1>Bienvenido al Sistema Digiturno Dirección de Sanidad </h1>
+    <h1>Unidad Prestadora de Salud Guaviare</h1>
+   
     <p>Haga clic en el botón para generar su turno</p>
     <button class="button" onclick="generarTurno()">Generar Turno</button>
     <div id="turno"></div>
