--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,17 @@
             font-size: 1.2rem;
             color: #555;
         }
-
+        /*Campo de entrada*/
+        .input{
+            padding: 10px;
+            font-size: 16px;
+            width:80%
+                max-width:300px;
+            margin-bottom:15px
+                border:1px solid #ccc
+                border-radius:5px;
+            
+        }
         /* Botón */
         .button {
             padding: 15px 30px;
