--- a/Index.html
+++ b/Index.html
@@ -93,15 +93,8 @@
             <!-- Los turnos aparecerán aquí -->
         </tbody>
     </table>
-<tr>
-		<td><h4>Dólar Hongkonés (HKD)</h4></td>
-		<td class="d-none d-md-table-cell text-center">COP<img src="/img/co-flag-icon.png" class="ms-2"/></td>
-		<td class="text-center">557.87</td>
-		<td class="text-center baja"><b>556.88</b><span class="d-block d-md-none negro">-0.99</span><span class="d-block d-md-none negro">-0.18%</span></td>
-		<td class="text-center d-none d-md-table-cell baja">-0.99</td>
-		<td class="text-center d-none d-md-table-cell">-0.18%</td>
-		<td class="text-center d-none d-md-table-cell" data-text="1737151199">17/ene. 4:59:59 pm</td>
-		</tr>	
+
+	<div class="tablesorter-header-inner">FECHA<br> <i class="tablesorter-icon bootstrap-icon-unsorted"></i></div>
     <script>
         // Variables globales
         let turnoActual = 0;
