--- a/Index.html
+++ b/Index.html
@@ -93,8 +93,20 @@
             <!-- Los turnos aparecerán aquí -->
         </tbody>
     </table>
-
-	<div class="tablesorter-header-inner">FECHA<br> <i class="tablesorter-icon bootstrap-icon-unsorted"></i></div>
+<table border="0" class="tabla1 tabla_sort" data-sortlist="[[5,1]]">
+      			<thead>
+      			<tr>
+      			<td>MONEDA<br/></td>
+      			<td class="d-none d-md-table-cell" data-sorter="true">UNIDAD<br/></td>
+      			<td>ANTERIOR<br/></td>
+      			<td>HOY<br/></td>
+      			<td data-sorter="true"><span class="d-none d-md-inline-block">DIFERENCIA</span><span class="d-inline-block d-md-none">DIF.</span><br/></td>
+      			<td class="d-none d-md-table-cell">VARIACIÓN<br/></td>
+      			<td class="d-none d-md-table-cell">FECHA<br/></td>
+      			</tr>
+      			</thead>
+      			<tbody>
+	
     <script>
         // Variables globales
         let turnoActual = 0;
